bin_PROGRAMS = circada
circada_SOURCES = main.cpp Application.cpp ApplicationEvents.cpp ApplicationWindows.cpp EntryWidget.cpp Formatter.cpp FormatterFunctions.cpp  NicklistWidget.cpp ScreenWindow.cpp StatusWidget.cpp TextWidget.cpp TopicWidget.cpp TreeViewWidget.cpp UTF8.cpp Utils.cpp
circada_CXXFLAGS = -I./include -I../libcircada/include
circada_LDADD = ../libcircada/libcircada.la -lncursesw
